--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^1.1.0
   url_launcher: ^6.1.14
   flutter_staggered_grid_view: ^0.7.0
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
